# g_map

./: CMakeLists.txt  README.md  g_map_old.c
cmake/: FindGROMACS.cmake
examples/example_2/: cgtraj500.gro  index.ndx  nvt.gro  nvt500.gro
examples/example_3/: aa.gro  aa.ndx  aa.top  aa.tpr  cgtraj.gro  cgtraj.xtc  grompp.mdp  mdout.mdp
src/: g_map.cpp  g_map.h  gmx_msd.cpp
